# gospel

./: .gitattributes  .gitignore  .ocamlformat  .ocamlformat-ignore  404.html  ARCHITECTURE.md  AUTHORS  BREAKING.md  CHANGES.md  DESIGN.md  LICENSE  Makefile  README.md  TODO.md  UPDATES.md  dune  dune-project  dune.inc  epic.txt  faq.html  good-practices.html  gospel.opam  index.html  sitemap.xml  stdlib.html  todo.md
docs/stdlib/: dune
gospel/ocaml-lib/: coercion.ml  dterm.ml  dune  identifier.ml  identifier.mli  misc.ml  numbers.ml  oast_iterator.ml  oast_iterator.mli  odocstrings.mli  olexer.mll  oparser.mly  oparsetree.mli  opprintast.ml  opprintast.mli  oprintast.ml  oprintast.mli  options.ml  parser_frontend.ml  parser_frontend.mli  tast.ml  tmodule.ml  tterm.ml  ttypes.ml  typing.ml  typing.mli  uast.mli  uast_utils.ml  uattr2spec.ml  ulexer.mll  uparser.mly  upretty_printer.ml  utils.ml  utils.mli
gospel/tools/: cli.ml  dune  gospel.ml  gospel_tc.ml  gospelwc.mll  options.ml  tc.ml  tc.mli
src/: .#tterm.ml  Opprintast.ml  attrs.ml  bin_utils.ml  bin_utils.mli  coercion.ml  coercion.mli  dterm.ml  dterm.mli  dune  id_uast.mli  ident.ml  ident.mli  identifier.ml  identifier.mli  itypes.ml  namespace.ml  namespace.mli  odocstrings.ml  olexer.mli  parse_uast.mli  parser_frontend.ml  parser_frontend.mli  patmat.ml  patmat.mli  patterns.ml  patterns.mli  pps.mli  pps.mll  pps_doc.mll  preid.ml  solver.ml  solver.mli  structure.ml  structure.mli  symbols.ml  symbols.mli  tast.ml  tast.mli  tast_dump.ml  (+32 more)
src/ppx_odoc_of_gospel/: dune  ppx_odoc_of_gospel.ml  ppx_odoc_of_gospel.mli
src/stdlib/: annotated_stdlib.mli  dune  file_to_string.ml  gospelstdlib.mli
stdlib/: bin_utils.ml  bin_utils.mli  checklib.ml  dune  gospelstdlib.mli  ocamlprimitives.mli
stdlib/coq/: CoqMakefile  _CoqProject  gospelstdlib_mli.v
stdlib/gospel/: gospelstdlib.mli
stdlib/ocaml/: array.mli  stdlib.mli
test/: dune  dune.inc  rec.mli  test.ml
test/coercions/: bad_type_id.mli  bad_type_multiple_args.mli  basic.mli  complex_cycle.mli  constr_literal.mli  double_definition.mli  dune.inc  simple_cycle.mli
test/documentation/: dune  test_preprocess_documentation.t
test/duplicates/: dune.inc  duplicate_consumes_top_level1.mli  duplicate_consumes_top_level2.mli  duplicate_consumes_top_level3.mli  duplicate_exn1.mli  duplicate_exn2.mli  duplicate_exn3.mli  duplicate_exn4.mli  duplicate_exn_ret1.mli  duplicate_exn_ret2.mli  duplicate_exn_ret3.mli  duplicate_exn_ret4.mli  duplicate_fun_args1.mli  duplicate_fun_args2.mli  duplicate_fun_args3.mli  duplicate_fun_args4.mli  duplicate_header_args1.mli  duplicate_header_args2.mli  duplicate_header_args3.mli  duplicate_header_args4.mli  duplicate_header_rets1.mli  duplicate_header_rets2.mli  duplicate_header_rets3.mli  duplicate_header_rets4.mli  duplicate_header_vars1.mli  duplicate_header_vars2.mli  duplicate_header_vars3.mli  duplicate_header_vars4.mli  duplicate_header_vars5.mli  duplicate_label1.mli  duplicate_label2.mli  duplicate_label3.mli  duplicate_label4.mli  duplicate_label_creation1.mli  duplicate_label_creation2.mli  duplicate_label_creation3.mli  duplicate_label_creation4.mli  duplicate_modifies_top_level1.mli  duplicate_modifies_top_level2.mli  duplicate_modifies_top_level3.mli  (+14 more)
test/gospel_as_documentation/: .ocamlformat  dune  gen_doc_example.ml  gen_doc_example.mli  gen_doc_example_pp.expected.mli
test/issues/: attribute_syntax.mli  dune.inc  include_module.mli  model_field_not_found.mli  model_is_not_record.mli  model_shadows_field.mli  no_return.mli  pattern_analysis_tuple.mli  pattern_in_lambda.mli  pattern_inlined_record.mli  record_with_partially_same_fields.mli  return_unit_and_ghost.mli  stdlib_float_array_not_found.mli  stdlib_float_array_t_not_found.mli  t1.mli  t2.mli  t4.mli  t5.mli  t6.mli  t7.mli  t9.mli  update_record.mli
test/literals/: char1.mli  dune.inc  ints.mli  invalid_literal.mli
test/locations/: foo.mli  test_location.t  wow.txt
test/namespaces/: dune.inc  ocaml_record1.mli  ocaml_record2.mli  ocaml_record3.mli  ocaml_record4.mli  ocaml_type1.mli  ocaml_type2.mli  ocaml_type3.mli  ocaml_type4.mli  ocaml_type5.mli
test/negative/: char1.mli  char1.mli.expected  constants1.mli  constructor_arity1.mli  constructor_arity1.mli.expected  constructor_arity2.mli  constructor_arity2.mli.expected  constructor_arity3.mli  constructor_arity3.mli.expected  constructor_arity4.mli  constructor_arity4.mli.expected  constructor_arity5.mli  dune  dune.inc  dune_gen.options  duplicate_declaration.mli  empty_match.mli  empty_match.mli.expected  exception_no_pattern.mli  exception_no_pattern.mli.expected  exn_arity.mli  exn_arity.mli.expected  field_application.mli  field_application.mli.expected  invariant1.mli  invariant1.mli.expected  invariant2.mli  invariant2.mli.expected  invariant3.mli  invariant3.mli.expected  invariant4.mli  invariant4.mli.expected  invariant5.mli  invariant5.mli.expected  partial_application.mli  pattern_binding.mli  t1.mli  t1.mli.expected  t10.mli  t10.mli.expected  (+76 more)
test/ocaml-source-mli/: actions.mli.expected  allocated_const.mli.expected  annot.mli.expected  arg.mli.expected  arg_helper.mli.expected  arrayLabels.mli.expected  asmlibrarian.mli.expected  asmlink.mli.expected  asttypes.mli.expected  augment_specialised_args.mli.expected  backend_intf.mli.expected  build_export_info.mli.expected  bytelibrarian.mli.expected  bytelink.mli.expected  bytepackager.mli.expected  bytesLabels.mli.expected  camlinternalFormatBasics.mli.expected  clflags.mli.expected  closure_conversion_aux.mli.expected  closure_id.mli.expected  cmi_format.mli.expected  cmo_format.mli.expected  command_line.mli.expected  compilation_unit.mli.expected  compile.mli.expected  compplugin.mli.expected  deadcode.mli.expected  debugcom.mli.expected  debugger_config.mli.expected  depend.mli.expected  emitaux.mli.expected  envaux.mli.expected  environments.mli.expected  errors.mli.expected  event.mli.expected  exec.mli.expected  extract_projections.mli.expected  filecompare.mli.expected  format.mli.expected  genlex.mli.expected  (+88 more)
(+1825 files in other folders)
