opam-version: "2.0"
maintainer: "Jean-Christophe.Filliatre@lri.fr"
authors: [
  "Jean-Christophe Filliâtre"
  "Cláudio Lourenço"
  "Clément Pascutto"
  "Mário Pereira"
]
license: "MIT"
homepage: "https://github.com/ocaml-gospel/gospel"
dev-repo: "git://github.com/ocaml-gospel/gospel"
bug-reports: "https://github.com/ocaml-gospel/gospel/issues"

build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name] {with-test}
]

depends: [
  "ocaml" {>= "4.07"}
  "dune" {>= "2.4.0"}
  "menhir"
  "cmdliner"
  "ppxlib" {>= "0.20.0"}
]

synopsis: "GOSPEL -- Generic Ocaml SPEcification Language"
