opam-version: "2.0"
synopsis: "A tool-agnostic formal specification language for OCaml"
description: """\
Gospel is a behavioural specification language for OCaml program. It provides
developers with a non-invasive and easy-to-use syntax to annotate their module
interfaces with formal contracts that describe type invariants, mutability,
function pre-conditions and post-conditions, effects, exceptions, and much more!"""
maintainer: "Jean-Christophe.Filliatre@lri.fr"
authors: [
  "Jean-Christophe Filliâtre"
  "Cláudio Lourenço"
  "Clément Pascutto"
  "Mário Pereira"
]
license: "MIT"
homepage: "https://github.com/ocaml-gospel/gospel"
bug-reports: "https://github.com/ocaml-gospel/gospel/issues"
depends: [
  "ocaml" {>= "4.09"}
  "dune" {>= "2.4.0"}
  "menhir" {>= "20181006"}
  "cmdliner" {>= "1.1.0"}
  "fmt" {>= "0.8.7"}
  "ocaml-compiler-libs" {>= "v0.12.0"}
  "ppxlib" {>= "0.26.0"}
  "ppx_deriving" {>= "5.2.1"}
  "ocamlfind"
]
build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name] {with-test}
]
dev-repo: "git://github.com/ocaml-gospel/gospel"
