(ocamllex
 (modules ulexer))

(menhir
 (modules uparser)
 (flags
  ("--unused-token" "GREATERRBRACKET" "--unused-token" "COMMENT"
    "--unused-token" "DOCSTRING" "--unused-token" "EOL")))

(library
 (public_name gospel)
 (flags :standard -open Ocaml_shadow -w -9)
 (libraries ocaml-compiler-libs.shadow fmt ppxlib ppxlib.ast)
 (modules_without_implementation uast))

(rule
 (targets gospelstdlib.ml)
 (deps gospelstdlib.mli.pp)
 (action
  (run stdlib/file_to_string.exe %{deps} %{targets})))

(rule
 (targets gospelstdlib.mli.pp)
 (deps stdlib/gospelstdlib.mli)
 (action
  (with-stdout-to
   %{targets}
   (run gospel_pps %{deps}))))
