(ocamllex
 (modules pps ulexer))

(menhir
 (modules uparser)
 (flags (-v)))

(library
 (public_name gospel)
 (flags :standard -open Ocaml_shadow)
 (preprocess
  (pps ppx_deriving.show))
 (libraries ocaml-compiler-libs.shadow fmt ppxlib ppxlib.ast)
 (modules_without_implementation uast))

(rule
 (targets gospelstdlib.ml)
 (deps stdlib/gospelstdlib.mli)
 (action
  (run stdlib/file_to_string.exe %{deps} %{targets})))
