; Creates an executable that type checks the Gospel and OCaml standard
; library and creates a marshalled representation of their
; definitions.

(rule
 (targets gospelstdlib.gospel ocamlprimitives.gospel)
 (deps
  (:check checklib.exe)
  gospelstdlib.mli
  ocamlprimitives.mli)
 (action
  (run %{check})))

(executable
 (name checklib)
 (modules checklib)
 (libraries gospel_checker))
