
(ocamllex
 (modules olexer ulexer))
(menhir
 (modules oparser uparser))

(library
  (name gospel)
  (public_name gospel)
  (flags :standard -w -9-32-27)
  (modules_without_implementation oasttypes oparsetree uast)
  (libraries compiler-libs))

(rule
 (targets gospelstdlib.ml)
 (deps    (:file ../stdlib/gospelstdlib.mli))
 (action  (run ../misc/file_to_string.exe ../stdlib/gospelstdlib.mli %{targets})))


