
(ocamllex
 (modules olexer ulexer))
(menhir
 (modules oparser uparser)
 (flags (
    "--unused-token" "GREATERRBRACKET"
    "--unused-token" "COMMENT"
    "--unused-token" "DOCSTRING"
    "--unused-token" "EOL"
 ))
)

(library
  (name gospel)
  (public_name gospel)
  (flags :standard -w -9-32-27 -linkall)
  (modules_without_implementation oasttypes oparsetree uast)
  ;(libraries ocaml-compiler-libs.common)
  )

(rule
 (targets gospelstdlib.ml)
 (deps    (:file ../stdlib/gospelstdlib.mli))
 (action  (run ../misc/file_to_string.exe ../stdlib/gospelstdlib.mli %{targets})))

