(test
 (name gen_doc_example)
 (modules_without_implementation gen_doc_example_pp)
 (package gospel))

(rule
 (target gen_doc_example_pp.mli)
 (package gospel)
 (action
  (with-stdout-to
   %{target}
   (run gospel pps-doc %{dep:gen_doc_example.mli}))))

(rule
 (alias runtest)
 (package gospel)
 (action
  (diff gen_doc_example_pp.expected.mli gen_doc_example_pp.mli)))
