(cram
 (deps %{bin:gospel} %{bin:odoc} pp.exe odoc_of_gospel.mli))

(executable
 (name pp)
 (modules pp)
 (libraries gospel.ppx ppxlib))

(rule
 (targets odoc_of_gospel.actual.mli)
 (deps
  (:pp pp.exe)
  (:input odoc_of_gospel.mli)
  (:gospel %{bin:gospel}))
 (action
  (run %{pp} --intf %{input} -pp "%{gospel} pps" -o %{targets})))

(rule
 (alias runtest)
 (action
  (diff odoc_of_gospel.expected.mli odoc_of_gospel.actual.mli)))
