(rule
 (targets no_modifies_while_returning_unit.output)
 (action
  (with-stderr-to
   %{targets}
   (with-accepted-exit-codes
    (or :standard 124)
    (run gospel check %{dep:no_modifies_while_returning_unit.mli})))))

(rule
 (alias runtest)
 (action
  (diff no_modifies_while_returning_unit.expected
    no_modifies_while_returning_unit.output)))
